Fix margin issue on mobile nav

--- a/app/assets/stylesheets/components/common/_mobile_nav.scss
+++ b/app/assets/stylesheets/components/common/_mobile_nav.scss
@@ -3,7 +3,9 @@
 // Styleguide Mobile navigation
 
 .mobile-nav {
-  @extend .unstyled-list;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
 }
 
 .mobile-nav__item {
